change in db local to cloud

--- a/api/.env
+++ b/api/.env
@@ -1,12 +1,12 @@
 #FOR LOCAL DATABASE
-HOST=localhost
-USER=root
-PASSWORD=
-DATABASE=blog
+# HOST=localhost
+# USER=root
+# PASSWORD=
+# DATABASE=blog
 
 
-#FOR CLEVER CLOUD DATABASE
-# HOST=bj38k0njjflxvk84ym2p-mysql.services.clever-cloud.com
-# USER=uctutlbgm6aofea2
-# PASSWORD=hiHOxdDvXc7Gg2Nd5RDi
-# DATABASE=bj38k0njjflxvk84ym2p
+FOR CLEVER CLOUD DATABASE
+HOST=bj38k0njjflxvk84ym2p-mysql.services.clever-cloud.com
+USER=uctutlbgm6aofea2
+PASSWORD=hiHOxdDvXc7Gg2Nd5RDi
+DATABASE=bj38k0njjflxvk84ym2p
