change in db local to cloud

--- a/api/.env
+++ b/api/.env
@@ -5,7 +5,7 @@
 # DATABASE=blog
 
 
-FOR CLEVER CLOUD DATABASE
+# FOR CLEVER CLOUD DATABASE
 HOST=bj38k0njjflxvk84ym2p-mysql.services.clever-cloud.com
 USER=uctutlbgm6aofea2
 PASSWORD=hiHOxdDvXc7Gg2Nd5RDi
