--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
