--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
