add cloudinary env

--- a/api/.env
+++ b/api/.env
@@ -11,3 +11,8 @@ HOST=bj38k0njjflxvk84ym2p-mysql.services.clever-cloud.com
 USER=uctutlbgm6aofea2
 PASSWORD=hiHOxdDvXc7Gg2Nd5RDi
 DATABASE=bj38k0njjflxvk84ym2p
+
+#cloudinary
+CLOUD_NAME=djsewrcyo
+API_KEY=516586948422481
+API_SECRET=twfDnzfqiGN1PPrZGLyvmk_A7V8
